[gd_scene load_steps=3 format=3 uid="uid://k8jllp47sxff"]

[ext_resource type="Script" path="res://game_componenets/ui/inventory/abstract/inv_slot_ui.gd" id="1_rxxq8"]
[ext_resource type="Texture2D" uid="uid://dym7bnksnnocv" path="res://assets/Retro Inventory/Original/Inventory_Slot_1.png" id="2_wtk5h"]

[node name="InventorySlot" type="Panel"]
self_modulate = Color(1, 1, 1, 0)
y_sort_enabled = true
custom_minimum_size = Vector2(4, 4)
offset_right = 10.0
offset_bottom = 10.0
scale = Vector2(1.2969, 1.3418)
script = ExtResource("1_rxxq8")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(4.62642, 4.47161)
scale = Vector2(0.37, 0.37)
texture = ExtResource("2_wtk5h")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
offset_right = 8.0
offset_bottom = 8.0
scale = Vector2(1.02746, 1.01448)

[node name="Panel" type="Panel" parent="CenterContainer"]
layout_mode = 2

[node name="AmountLabel" type="Label" parent="CenterContainer/Panel"]
z_index = 1
custom_minimum_size = Vector2(23, 23)
layout_mode = 0
offset_left = -0.247704
offset_top = 1.1424
offset_right = 22.7523
offset_bottom = 24.1424
scale = Vector2(0.144733, 0.126009)
text = "99
"
horizontal_alignment = 2

[node name="ItemDisplay" type="Sprite2D" parent="CenterContainer/Panel"]
z_index = 1
position = Vector2(0.502755, 0.407772)
scale = Vector2(0.271475, 0.194877)

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
